# qt_plugin_entrypoint

./: .clang-format  .gitignore  README.md
source/: CMakeLists.txt
source/main_app/: CMakeLists.txt  MainApp.cpp  MainApp.hpp  MainApp.ui  main.cpp
source/plugin_cat/: CMakeLists.txt  CatInfo.cpp  CatInfo.hpp  DogEnemy.cpp  DogEnemy.hpp  DogEnnemy.cpp  DogEnnemy.hpp  PluginCat.cpp  PluginCat.hpp  PluginCat.json
source/plugin_dog/: CMakeLists.txt  DogFriendInterface.hpp  DogInterface.hpp  PluginDog.cpp  PluginDog.hpp  PluginDog.json
source/plugin_frog/: CMakeLists.txt  CatInterface.hpp  DogFriend.cpp  DogFriend.hpp  DogFriendInterface.hpp  PluginFrog.cpp  PluginFrog.hpp  PluginFrog.json
source/utils/: CMakeLists.txt  PluginInterface.hpp  PluginManager.cpp  PluginManager.hpp  utils.cpp  utils.hpp
